<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".PlayWithAIActivity">

    <LinearLayout
        android:id="@+id/aiPlayerNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/player_name"
            android:textAllCaps="false"
            android:textColor="#5C5C5C"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/aiPlayerNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#6E6E6E"
            android:hint="@string/nick_name"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#5C5C5C"
            android:textColorHint="#6E6E6E"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/aiPlayerNameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="85dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_button_1"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="@string/BANNER_AD_UNIT_ID" />

    </LinearLayout>

</LinearLayout>