<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/settingsBackBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp"
            android:src="@drawable/ic_back_arrow" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8.5" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:src="@drawable/app_inside_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="5dp"
        android:autoSizeMinTextSize="22dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#505050"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_for_icons"
            android:padding="6dp"
            android:src="@drawable/ic_vibration" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/vibration"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/vibrationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:gravity="center"
            android:textOff="OFF"
            android:textOn="ON" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_for_icons"
            android:padding="6dp"
            android:src="@drawable/ic_sound" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/sound"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <Switch
            android:id="@+id/soundSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:gravity="center"
            android:textOff="OFF"
            android:textOn="ON" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rateUsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_for_icons"
            android:padding="6dp"
            android:src="@drawable/ic_rating" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/rating"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/feedbackLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_for_icons"
            android:padding="6dp"
            android:src="@drawable/ic_feedback" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="@string/feedback"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/BANNER_AD_UNIT_ID" />

</LinearLayout>