<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/color_app_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ChoosePlayerSymbolActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="35dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/pick_your_side"
        android:textColor="#454545"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pickSideCrossImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@drawable/ic_cross" />

        <ImageView
            android:id="@+id/pickSideCircleImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@drawable/ic_circle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="35dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pickSideCrossRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:src="@drawable/ic_radio_button_checked" />

        <ImageView
            android:id="@+id/pickSideCircleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:src="@drawable/ic_radio_button_unchecked" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pickSideContinueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="85dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/bg_button_2"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textColor="#454545"
        android:textSize="21sp" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/BANNER_AD_UNIT_ID" />

</LinearLayout>